# ScaderESP32

./: .gitignore  .raftcli_history  CMakeLists.txt  Dockerfile  LED_TIMING_FIX_ANALYSIS.md  LICENSE  Makefile  README.md  TODO.md  build.sh  flash.sh  otaFSImage.sh  otaupdate.sh  raftcli_history.txt  requirements.txt  scpflash.sh
.claude/: settings.local.json
ScaderOpenerUI/: platformio.ini
components/HWSteppers/: CMakeLists.txt
components/HWSteppers/HWElemSteppers/: HWElemMultiStepperFormat.h  HWElemSteppers.cpp  HWElemSteppers.h
components/HWSteppers/HWElemSteppers/Axes/: AxesParams.h  AxesPosition.h  AxisParams.h  AxisValues.cpp  AxisValues.h
components/HWSteppers/HWElemSteppers/Controller/: MotionArgs.cpp  MotionArgs.h  MotionBlockManager.cpp  MotionBlockManager.h  MotionController.cpp  MotionController.h  MotionPlanner.cpp  MotionPlanner.h
components/HWSteppers/HWElemSteppers/EndStops/: EndStops.cpp  EndStops.h
components/HWSteppers/HWElemSteppers/Geometries/: AxisGeomBase.h  AxisGeomXYZ.cpp  AxisGeomXYZ.h
components/HWSteppers/HWElemSteppers/MotorEnabler/: MotorEnabler.h
components/HWSteppers/HWElemSteppers/RampGenerator/: MotionBlock.cpp  MotionBlock.h  MotionPipeline.h  MotionPipelineIF.h  MotionRingBuffer.h  RampGenTimer.cpp  RampGenTimer.h  RampGenerator.cpp  RampGenerator.h
components/HWSteppers/HWElemSteppers/StepDrivers/: StepDriverBase.cpp  StepDriverBase.h  StepDriverParams.h  StepDriverTMC2209.cpp  StepDriverTMC2209.h
components/HWSteppers/HWTiming/: HWTimingBase.h
components/HWSteppers/test/: CMakeLists.txt  Steppers_RampGen_test.cpp
components/Scader/: CMakeLists.txt
components/Scader/HWElemINA219/: HWElemINA219.cpp  HWElemINA219.h
components/Scader/ScaderBTHome/: ScaderBTHome.cpp  ScaderBTHome.h
components/Scader/ScaderCat/: ScaderCat.cpp  ScaderCat.h
components/Scader/ScaderCommon/: ScaderCommon.cpp  ScaderCommon.h
components/Scader/ScaderDoors/: DoorStrike.cpp  DoorStrike.h  ScaderDoors.cpp  ScaderDoors.h
components/Scader/ScaderElecMeters/: CTProcessor.h  ScaderElecMeters.cpp  ScaderElecMeters.h
components/Scader/ScaderLEDPixels/: LEDPatternAutoID.h  LEDPatternFire.h  LEDPatternRainbowSnake.h  ScaderLEDPixels.cpp  ScaderLEDPixels.h  ScaderLEDPixelsCustom.cpp  ScaderLEDPixelsCustom.h  SimpleRMTLeds.cpp  SimpleRMTLeds.h  SimpleRMTLedsWrapper.cpp  SimpleRMTLedsWrapper.h
components/Scader/ScaderLocks/: DoorStrike.cpp  ScaderLocks.cpp  ScaderLocks.h
components/Scader/ScaderMarbleRun/: ScaderMarbleRun.cpp  ScaderMarbleRun.h
components/Scader/ScaderOpener/: DeviceHX711.h  DoorOpener.cpp  DoorOpener.h  MotorAndAngleSensor.cpp  MotorAndAngleSensor.h  MotorMechanism.cpp  MotorMechanism.h  OpenerStatus.cpp  OpenerStatus.h  ScaderOpener.cpp  ScaderOpener.h  StateChangeDetector.h  UIModule.cpp  UIModule.h
components/Scader/ScaderPulseCounter/: ScaderPulseCounter.cpp  ScaderPulseCounter.h
components/Scader/ScaderRFID/: RFIDModuleBase.cpp  RFIDModuleBase.h  RFIDModule_EccelA1SPI.cpp  RFIDModule_EccelA1SPI.h  ScaderRFID.cpp  ScaderRFID.h
components/Scader/ScaderRelays/: SPIDimmer.cpp  SPIDimmer.h  ScaderRelays.cpp  ScaderRelays.h
components/Scader/ScaderShades/: ScaderShades.cpp  ScaderShades.h
components/Scader/ScaderTest/: ScaderTest.h
components/Scader/ScaderWaterer/: MoistureSensors.cpp  MoistureSensors.h  PumpControl.cpp  PumpControl.h  ScaderWaterer.cpp  ScaderWaterer.h
components/Scader/TinyPICO/: TinyPICO.cpp  TinyPICO.h
components/comms/: CMakeLists.txt
components/comms/CommsChannelMsg/: CommsChannelMsg.cpp  CommsChannelMsg.h
components/comms/CommsChannels/: CommsChannel.cpp  CommsChannel.h  CommsChannelManager.cpp  CommsChannelManager.h  CommsChannelSettings.h  ProtocolCodecFactoryHelper.h
components/comms/FileStreamProtocols/: FileStreamBase.cpp  FileStreamBase.h  FileUploadHTTPProtocol.cpp  FileUploadHTTPProtocol.h  FileUploadOKTOProtocol.cpp  FileUploadOKTOProtocol.h  StreamDatagramProtocol.cpp  StreamDatagramProtocol.h
components/comms/ProtocolBase/: ProtocolBase.h
components/comms/ProtocolExchange/: FileStreamSession.cpp  FileStreamSession.h  ProtocolExchange.cpp  ProtocolExchange.h
components/comms/ProtocolRICFrame/: ProtocolRICFrame.cpp  ProtocolRICFrame.h
components/comms/ProtocolRICJSON/: ProtocolRICJSON.cpp  ProtocolRICJSON.h
components/comms/ProtocolRICSerial/: ProtocolRICSerial.cpp  ProtocolRICSerial.h
components/comms/ProtocolRawMsg/: ProtocolRawMsg.h
components/comms/RICRESTMsg/: RICRESTMsg.cpp  RICRESTMsg.h
components/comms/ROSSerial/: ROSSerialAccel.h  ROSSerialAddOn.h  ROSSerialHandler.h  ROSSerialPowerStatus.h  ROSSerialSmartServo.h  ROSTopicManager.h
components/comms/RestAPIEndpoints/: RestAPIEndpoint.h  RestAPIEndpointManager.cpp  RestAPIEndpointManager.h
components/comms/test/: ProtocolOverAscii_test.cpp
components/coreext/: CMakeLists.txt
components/coreext/ArPreferences/: ArPreferences.cpp  ArPreferences.h
components/coreext/Logger/: LoggerPapertrail.cpp  LoggerPapertrail.h
components/hardware/: CMakeLists.txt
components/hardware/AS5600Sensor/: AS5600Sensor.cpp  AS5600Sensor.h
components/hardware/Bus/: BusBase.h  BusConsts.h  BusRequestInfo.h  BusRequestResult.h  BusSerial.cpp  BusSerial.h  BusStats.h
components/hardware/HWElem/: HWElemConsts.h
components/hardware/HWElemBase/: HWElemBase.cpp  HWElemBase.h  HWElemFormats.h  HWElemReq.h
components/hardware/HWElemMsg/: HWElemMsg.h
components/hardware/HX711/: DeviceHX711.h
components/hardware/Helpers/: LatchingAngleAverage.h  SampleCollector.cpp  SampleCollector.h
components/hardware/MMWave/: DeviceMMWave.h
components/hardware/MT6701Sensor/: MT6701Sensor.cpp  MT6701Sensor.h
components/hardware/MotorMechanism/: MotorMechanism.cpp  MotorMechanism.h
devdocs/: RMT_BUFFER_INVESTIGATION.md  WEBSERVER_ROUTING_INVESTIGATION.md
docs/: LoggerLoki_Implementation.md
main/: CMakeLists.txt  DetectHardware.cpp  DetectHardware.h  SysTypeStatics.cpp  SysTypeStatics.h  main.cpp
optional_components/EthW5500/: CMakeLists.txt  idf_component.yml
scripts.old/: otaFWUpdate.sh  otaFlashOldScader.sh  (+1 more)
(+223 files in other folders)
