idf_component_register(
                SRCS 
                  "CommsChannels/CommsChannelManager.cpp"
                  "CommsChannels/CommsChannel.cpp"
                  "ProtocolRawMsg/ProtocolRawMsg.cpp"
                  "ProtocolBase/ProtocolBase.cpp"
                  "ROSSerial/ROSSerialMsg.cpp"
                  "ROSSerial/ROSSerialHandler.cpp"
                  "RICRESTMsg/RICRESTMsg.cpp"
                  "ProtocolRICSerial/ProtocolRICSerial.cpp"
                  "ProtocolRICFrame/ProtocolRICFrame.cpp"
                  "ProtocolRICJSON/ProtocolRICJSON.cpp"
                  "ProtocolOverAscii/ProtocolOverAscii.cpp"
                  "FileStreamProtocols/FileStreamBase.cpp"
                  "FileStreamProtocols/FileUploadOKTOProtocol.cpp"
                  "FileStreamProtocols/FileUploadHTTPProtocol.cpp"
                  "FileStreamProtocols/StreamDatagramProtocol.cpp"
                  "ProtocolExchange/ProtocolExchange.cpp"
                  "ProtocolExchange/FileStreamSession.cpp"
                INCLUDE_DIRS
                  "CommsChannels"
                  "ProtocolRawMsg"
                  "ProtocolBase"
                  "ROSSerial"
                  "RICRESTMsg"
                  "ProtocolRICSerial"
                  "ProtocolRICFrame"
                  "ProtocolRICJSON"
                  "ProtocolOverAscii"
                  "FileStreamProtocols"
                  "ProtocolExchange"
                REQUIRES
                  raftcore-src
                  coreext
                  system
                  comms
                )

