idf_component_register(
                SRCS 
                  "AS5600Sensor/AS5600Sensor.cpp"
                  "MT6701Sensor/MT6701Sensor.cpp"
                  "Helpers/SampleCollector.cpp"
                  "ScaderOpener/MotorMechanism.cpp"
                INCLUDE_DIRS
                  "AS5600Sensor"
                  "MT6701Sensor"
                  "HX711"
                  "MotorMechanism"
                  "Helpers"
                REQUIRES
                  RaftCore
                  RaftI2C
                )
